--- a/styles.css
+++ b/styles.css
@@ -69,5 +69,5 @@ body{
     background-color: red;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    align-items: center;
 }
