--- a/kstyles.css
+++ b/kstyles.css
@@ -3,22 +3,20 @@
     margin: 0;
 }
 
-.topnav {
+#header {
     overflow: hidden;
-    background-color: rgb(211, 211, 211);
-    position: relative;
+    background-color: #2a6dcc;
+    position: fixed;
     display: flex;
     flex-direction: column;
     justify-content: center;
-}
-
-#links a{
-    color:black
+    width: 100%;
 }
   
 .topnav #links {
+    text-align: center;
     display: none;
-    background-color: rgb(233, 233, 233);
+    background-color: #14468A;
 
 }
   
@@ -31,28 +29,41 @@
 }
   
 .topnav a.icon {
-    background: rgb(211, 211, 211);
+    background: #2a6dcc;
     display: block;
     position: absolute;
     right: 0;
     top: 0;
+    padding: 21px;
 }
   
 .topnav a:hover {
-    background-color: rgb(233, 233, 233);
+    background-color:#14468A;
     color: black;
 }
   
-.active {
-    background-color: #04AA6D;
-    color: white;
+#header img{
+    margin-left: 40px;
+    max-width:270px;
 }
 
-body{
-    text-align:center;
-    color:black;
+.kontaktid{
+    padding-top: 60px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    border-bottom: 1px solid grey;
+    padding-bottom: 10px;
 }
-.topnav img{
-    margin-left: 40px;
-    max-width:230px;
+
+.bord{
+    border-bottom: 1px solid grey;
+    padding: 10px;
+}
+
+.kontaktid img{
+    width: 300px;
+    height: 300px;
+    border-radius: 50%;
 }
